--- a/01-galerie.html
+++ b/01-galerie.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-    <h1>Galerie</h1>
+
+        <h1>Galerie</h1>
+ 
     <p>lorem⇥</p>
-    <div class="overlay">
-        <figure><img src="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
+    <div class="overlay" x-show="GalleryOpen === 1">
+       <figure><img bindingImage="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
     </div>
+
 </body>
 </html>
