--- a/01-galerie.html
+++ b/01-galerie.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -12,6 +13,7 @@
         <h1>Galerie</h1>
  
     <p>lorem⇥</p>
+    
     <div class="overlay" x-show="GalleryOpen === 1">
        <figure><img bindingImage="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
     </div>
