--- a/01-galerie.html
+++ b/01-galerie.html
@@ -10,11 +10,11 @@
 
 <body>
 
-        <h1>Galerie</h1>
+    <h1>Galerie</h1>
  
     <p>lorem⇥</p>
     
-    <div class="overlay" x-show="GalleryOpen === 1">
+    <div class="overlay">
        <figure><img bindingImage="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
     </div>
 
