--- a/01-galerie.html
+++ b/01-galerie.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 
-<body>
+<body x-data="">
 
     <h1>Galerie</h1>
  
     <p>lorem⇥</p>
     
     <div class="overlay">
-       <figure><img bindingImage="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
+       <figure><img src="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
     </div>
 
 </body>
