--- a/01-galerie.html
+++ b/01-galerie.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 
-<body x-data="">
+<body x-data="{
+    imageIsOpen:'https://picsum.photos/id/237/400/300'
+}">
 
     <h1>Galerie</h1>
- 
+ <img src="https://picsum.photos/id/236/40/60" alt="miniature chiot"
+  @click="imageIsOpen = 'https://picsum.photos/id/236/200/300'">
+ <img src="https://picsum.photos/id/237/40/60" alt="miniature chiot"
+  @click="imageIsOpen = 'https://picsum.photos/id/237/200/300'">
     <p>lorem⇥</p>
     
-    <div class="overlay">
-       <figure><img src="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
+    <div class="overlay" 
+        x-show="imageIsOpen"
+        @click="imageIsOpen= null"
+        @keyup.escape.window="imageIsOpen = null">
+       <figure><img :src="imageIsOpen" alt="image 237... un chiot"></figure>
     </div>
 
 </body>
