--- a/02-json.html
+++ b/02-json.html
@@ -1,1 +1,18 @@
-[ {prop1:1, }, {prop2:2, }, ]
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+</head>
+<body>
+    const1 tab1 = [ {prop1:1, }, {prop2:2, }, ];
+
+for (const element of tab1) {
+    console.log(element)
+}
+</body>
+</html>
