--- a/02-json.html
+++ b/02-json.html
@@ -12,7 +12,7 @@
     const1 tab1 = [ {prop1:1, }, {prop2:2, }, ];
 
 for (const element of tab1) {
-    console.log(element)
+    console.log(element);
 }
 </body>
 </html>
