--- a/02-json.html
+++ b/02-json.html
@@ -11,7 +11,7 @@
 <body>
     const1 tab1 = [ {prop1:1, }, {prop2:2, }, ];
 
-for (const element of tab1) {
+x-for (const element of tab1) {
     console.log(element);
 }
 </body>
